<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackBaseColor"
     >
    <LinearLayout
        android:id="@+id/left_linear"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/left_linear_padding_left"
		android:paddingTop="@dimen/left_linear_padding_top"
		android:paddingBottom="@dimen/left_linear_padding_bottom"
        android:background="@drawable/default_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView 
                android:id="@+id/avatar"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:background="@drawable/avatar_default"
                android:contentDescription="@string/app_name"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/avatar_size"
                android:orientation="vertical"
                android:layout_marginLeft="15dp"
                android:gravity="bottom">
                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/UserName"
                    android:text="@string/testname"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:id="@+id/signature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Signature"
                    android:text="@string/testsig"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:id="@+id/age" 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Age"
                    android:text="@string/testage"
                    android:drawableRight="@drawable/mm"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top" >
            <ImageButton
                android:id="@+id/event_message"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_margin="@dimen/button_margin"
                android:background="@drawable/btn_event_selector"
                android:contentDescription="@string/app_name"/>
            <ImageButton
                android:id="@+id/content_message"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_margin="@dimen/button_margin"
                android:background="@drawable/btn_content_selector"
                android:contentDescription="@string/app_name"/>
            <ImageButton
                android:id="@+id/private_message"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_margin="@dimen/button_margin"
                android:background="@drawable/btn_private_selector"
                android:contentDescription="@string/app_name"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_size"
                android:gravity="bottom"
                android:orientation="vertical"
                android:layout_marginRight="5dp">
                <TextView
                    android:id="@+id/attention_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AttentionCount"
                    android:text="@string/testnum"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AttentionTitle"
                    android:text="@string/attention"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_size"
                android:gravity="bottom"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/fans_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AttentionCount"
                    android:text="@string/testnum"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AttentionTitle"
                    android:text="@string/fans"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    
    
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@id/left_linear"
	    android:scrollbars="@null" >
        <LinearLayout
            android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical">
            <TextView
                android:id="@+id/broadcast"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_menu_broadcast"
                style="@style/MenuText"
                android:text="@string/broadcast"
                />
            <TextView
                android:id="@+id/person"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_menu_person"
                style="@style/MenuText"
                android:text="@string/person"
                />
            <TextView
                android:id="@+id/event"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_menu_event"
                style="@style/MenuText"
                android:text="@string/event"
                />
            <TextView
                android:id="@+id/album"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_menu_album"
                style="@style/MenuText"
                android:text="@string/album"
                />
            <TextView
                android:id="@+id/video"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_menu_video"
                style="@style/MenuText"
                android:text="@string/video"
                />
            <TextView
                android:id="@+id/congrate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_menu_congrate"
                style="@style/MenuText"
                android:text="@string/congrate"
                />
            <TextView
                android:id="@+id/settings"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_menu_settings"
                style="@style/MenuText"
                android:text="@string/settings"
                />
		</LinearLayout>
    </ScrollView>
</RelativeLayout>