<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/album_bar_height"
        android:background="@drawable/bg_title_bar"
        android:gravity="center_vertical"
        android:padding="@dimen/album_relative_padding" >
 
        <TextView
            android:id="@+id/album_title"
            style="@style/AlbumTitle"  
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/album_name_margin"
            android:text="@string/testalbumname" />

        <TextView
            android:id="@+id/album_tag"
            style="@style/AlbumTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/album_name_margin"
            android:layout_alignBottom="@id/album_title"
            android:text="@string/album_tag_activity_created" />
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/album_item_height">
        <ImageView
            android:id="@+id/album_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_album"
            android:contentDescription="@string/app_name"/>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/album_item_height"
	        android:orientation="vertical"
	        android:paddingLeft="@dimen/album_linear_padding"
	        android:background="@drawable/bg_list_album_selector"
	        android:gravity="center_vertical">
	        <TextView
	            android:id="@+id/album_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="@dimen/album_text_space"
	            style="@style/AlbumName"
	            android:text="@string/testalbumsubname"
	            />
	        <TextView
	            android:id="@+id/album_date"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="@dimen/album_text_space"
	            style="@style/AlbumName"
	            android:text="@string/testdate2"
	            />
	        <TextView 
	            android:id="@+id/album_count"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="@dimen/album_text_space"
	            style="@style/AlbumName"
	            android:text="@string/testalbumnum"
	            />
	    </LinearLayout>
</FrameLayout>
</LinearLayout>