<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/bg_list_guest_selector"
    android:padding="5dp" >

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/comment_avatar_size"
        android:layout_height="@dimen/comment_avatar_size"
        android:background="@drawable/avatar_default"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/CommentUsername"
                android:text="@string/testname"
                android:layout_weight="1.0"/>
            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/CommentDate"
                android:text="@string/testdate2"
                android:layout_weight="1.0"/> 
        </LinearLayout>
        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CommentContent"
            android:text="@string/testdetail"/>
    </LinearLayout>

</LinearLayout>