<?xml version="1.0" encoding="utf-8"?>
  <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/congrate_dialog_height"
        android:layout_margin="@dimen/congrate_dialog_margin">
        <TextView
            android:id="@+id/back"
            android:layout_width="match_parent" 
            android:layout_height="match_parent"
            android:layout_margin="@dimen/congrate_margin"
            android:background="@drawable/ic_bg_congrate_green_n" 
            style="@style/CongrateText"
            android:text=""/>
        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/congrate_avatar_size"
            android:layout_height="@dimen/congrate_avatar_size"
            android:layout_marginLeft="18dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar_default"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/avatar"
            android:layout_toRightOf="@id/avatar"
            android:layout_marginLeft="10dp"
            style="@style/CongrateName"
            android:text="@string/testname"/> 
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_below="@id/avatar"
            android:layout_alignLeft="@id/avatar"
            style="@style/CongrateDate" 
            android:text="@string/testdate"/>
        <ScrollView
            android:layout_below="@id/date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/congrate_dialog_scroll_height">
	        <TextView
	            android:id="@+id/content"	           
	            android:layout_width="match_parent" 
	            android:layout_height="wrap_content"
	            style="@style/CongrateText"
	            android:text="@string/testdetail"/>
        </ScrollView>
        <TextView 
            android:id="@+id/text_count" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="25dp"
            android:layout_alignParentRight="true"  
            android:layout_alignParentBottom="true"
            style="@style/CongrateCount"
            android:text="@string/testcount"/>
</RelativeLayout>

