<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/album_dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:padding="0dp"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/album_dialog_padding"
        >
        <TextView
            android:id="@+id/title"  
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            style="@style/AlbumDialogTitle"
            android:text="@string/settings_new_version"/>
        <ImageView
            android:id="@+id/divider"
            android:layout_below="@id/title"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider_radio"
            android:contentDescription="@string/app_name"/>
        <ScrollView
            android:layout_below="@id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:maxHeight="300dp"
                style="@style/SettingsNewVersion"
                android:text="@string/testnewversion"/>
        </ScrollView>
        
    </RelativeLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/btn_dialog_cancel_selector"
            android:text="@string/album_dialog_cancel"
            style="@style/AlbumDialogButton"/>
        <Button
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/btn_dialog_save_selector"
            android:text="@string/settings_new_update"
            style="@style/AlbumDialogButton"/>
    </LinearLayout>
</LinearLayout>
